--- a/Taxi-Version2/src/main/webapp/Home.html
+++ b/Taxi-Version2/src/main/webapp/Home.html
@@ -6,7 +6,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
-<img src="TaxiLogo.png" style="display: block;margin-left: auto;margin-right: auto;width: 10%;">
+<img src="TaxiLogo.png" onclick="window.history.go(0)" style="display: block;margin-left: auto;margin-right: auto;width: 10%;">
 <table align="center">
 <tr>
 <td><button id="taxi" name="users" value="Taxi">Taxi</button></td>
